--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: permanent marker, Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 600px;
+  margin: 2em auto;
+  border-bottom: 1px solid rgb(11, 11, 141);
+}
+.navbar h1, a{
+  color: rgb(11, 11, 141);
+}
+.navbar a{
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 16px;
+}
+.navbar .links{
+  margin-left: auto;
+}
+.navbar a:hover{
+  color:red
+}
+.content{
+  max-width: 600px;
+  margin:40px auto;
+  padding: 20px;
+  text-align: center;
+}
+.preview{
+  margin: 20px 0;
+  padding: 16px 12px;
+  font-size: 16px;
+  cursor: pointer;
+  box-shadow: 1px 2px 5px rgb(189, 188, 188);
+}
+.preview:hover{
+  box-shadow: 1px 2px 5px rgb(240, 40, 40);
+}
+.preview p{
+  color: rgb(241, 66, 66);
+  font-size: small;
+}
+.blog-preview > h2{
+  text-align: start;
+  font-family: 'Times New Roman', Times, serif;
+  color: rgb(241, 66, 66);
+}
+.blog-preview a{
+  text-decoration: none;
+}
+
+.blog-details{
+  text-align: start;
+}
+
+.blog-details h2{
+  color: red;
+  margin-bottom: 16px;
+}
+.blog-details div{
+  font-size: 14px;
+}
+.blog-details p{
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.create{
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create h2{
+  color: red;
+  font-size: 20px;
+  margin: 20px;
+}
+
+.create label{
+  display: block;
+  text-align: left;
+}
+.create textarea, .create input{
+  padding: 6px 20px;
+  margin: 10px 0;
+  border: 1px solid #a7a3a3;
+  box-sizing: border-box;
+  width: 100%;
+  display: block;
+}
+button{
+  background-color: red;
+  color: whitesmoke;
+  border: none;
+  padding: 6px 10px;
+  border-radius: 6px;
+  align-items: start;
+  margin-top: 10px;
 }
